project has been deployed and the development of header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,14 @@
-<header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
-      </li>
-
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
-      </li>
-    </ul>
-  </nav>
+<header class="header-block">
+  <div class="container">
+    <div class="header">
+    <a href=".//../index.html"
+      ><img class="logo" src=".//../public/favicon.svg" alt="logo"
+    /></a>
+    <button class="mob-menu-button">
+      <svg width="18px" height="12px" class="mob-menu-icon">
+        <use href=".//../img/sprite/sprite.svg#mob-menu"></use>
+      </svg>
+      </div>
+    </button>
+  </div>
 </header>
