--- a/src/css/header.css
+++ b/src/css/header.css
@@ -14,7 +14,7 @@
   width: 24px;
   height: 24px;
   border-radius: 3px;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 1px 2px rgba(15, 11, 89, 0.3);
 }
 
 .mob-menu-button {
@@ -24,7 +24,7 @@
 }
 
 .mob-menu-icon {
-  color: rgba(250, 250, 250, 1);
+  fill: rgba(250, 250, 250, 1);
 }
 
 @media screen and (min-width: 1200px) {
